--- a/chrome/startpage/style.css
+++ b/chrome/startpage/style.css
@@ -48,3 +48,26 @@ h2.notbottom{
 	border: 1px solid var(--color2);
 	border-radius: 5px;
 }
+#bar{
+	position: fixed;
+	top: 30%;
+	left: 50%;
+	width: 500px;
+	height: 55px;
+	margin-left: -250px;
+	border: 1px solid var(--color1);
+	border-radius: 5px;
+}
+input[type=text]{
+	float: left;
+	padding: 6px;
+	border: none;
+	width: 98%;
+	font-size: 1.5em;
+	color: var(--color1);
+	background: none;
+	text-align: center;
+}
+input[type=text]:focus{
+	outline: none;
+}
