--- a/widgets/mybar/style.css
+++ b/widgets/mybar/style.css
@@ -8,17 +8,17 @@
 	font-family:"peep";
 	--tc: var(--color0);
 	--bgc: var(--color1);
-	--elshadow: 0px 4px 10px 4px rgba(0,0,0,0.15);
+	--elshadow: none;/*0px 4px 10px 4px rgba(0,0,0,0.15);*/
 }
 .background {
 	position: absolute;
 	display: block;
-	width: 98vw;
+	width: 97vw;
 	height: 30px;
 	margin-top: 20px;
-	margin-left: 1vw; 
-	background-color: none;
-	box-shadow: none;
+	margin-left: 1.5vw; 
+	background-color: var(--bgc);
+	box-shadow: 0px 10px 10px 4px rgba(0,0,0,0.4);
 	border-radius: 5px;
 	z-index: -1;
 }
@@ -77,7 +77,7 @@ p.l {
 	display: block;
 	width: 6vw;
 	height: 30px;
-	margin-left: 93vw;
+	margin-left: 92.5vw;
 	margin-top: 20px;
 	border-radius: 5px;
 	background-color: var(--bgc);
@@ -88,7 +88,7 @@ p.l {
 	display: block;
 	width: 4vw;
 	height: 30px;
-	margin-left: 88vw;
+	margin-left: 87.5vw;
 	margin-top: 20px;
 	border-radius: 5px;
 	background-color: var(--bgc);
@@ -99,7 +99,7 @@ p.l {
 	display: block;
 	width: 9vw;
 	height: 30px;
-	margin-left: 78vw;
+	margin-left: 77.5vw;
 	margin-top: 20px;
 	border-radius: 5px;
 	background-color: var(--bgc);
@@ -110,7 +110,7 @@ p.l {
 	display: block;
 	width: 23vw;
 	height: 30px;
-	margin-left: 1vw;
+	margin-left: 1.5vw;
 	margin-top: 20px;
 	border-radius: 5px;
 	background-color: var(--bgc);
