--- a/widgets/bar2/style.css
+++ b/widgets/bar2/style.css
@@ -1,7 +1,11 @@
 @import "bar2/colors.css";
 
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
+
 :root{
-	--shadow: 0px 10px 10px 4px rgba(0,0,0,0.4);
+	/*--shadow: 0px 10px 10px 4px rgba(0,0,0,0.4);*/
+	--shadow: none;
 	--bradius: 20px;
 }
 
@@ -18,11 +22,15 @@
 }
 
 p.side {
-	font-family: "Fira Code";
+	font-family: 'Orbitron', sans-serif;
+	/*font-family: 'Ubuntu Mono', monospace;*/
+	/*font-family: "Fira Code";*/
 	text-align: left;
-	color: var(--color1);
+	/*color: var(--color0);*/
+	color: #cecece;
 	padding: 5px;
 	margin: 0px;
+	line-height: 25px;
 }
 
 .block{
@@ -34,28 +42,35 @@ p.side {
 }
 
 .date {
-	background-color: var(--color3);
+	/*background-color: var(--color3);*/
+	background-color: none;
 }
 
 .time {
 	margin-top: 75px;
-	background-color: var(--color4);
+	/*background-color: var(--color4);*/
+	background-color: none;
 }
 
 .wifi{
 	margin-top: 140px;
-	background-color: var(--color5);
+	/*background-color: var(--color5);*/
+	background-color: none;
 }
 
 .bat{
 	margin-top: 205px;
-	background-color: var(--color6);
+	/*background-color: var(--color6);*/
+	background-color: none;
 }
 
 .music{
 	margin-top: 270px;
-	background-color: var(--color7);
+	/*background-color: var(--color7);*/
+	background-color: none;
 }
+
+/*
 
 div.time p{
 	text-align: center;
@@ -67,5 +82,5 @@ div.wifi p{
 
 div.bat p{
 	text-align: center;
-}
+}*/
 
