--- a/widgets/mybar/style.css
+++ b/widgets/mybar/style.css
@@ -6,8 +6,8 @@
 /*variables*/
 :root {
 	font-family:"peep";
-	--tc: var(--color0);
-	--bgc: var(--color1);
+	--tc: var(--color7);
+	--bgc: var(--color0);
 	/* --elshadow: 0px 4px 10px 4px rgba(0,0,0,0.15); */
 	--elshadow: none;
 	--br: 5px;
@@ -20,8 +20,8 @@
 	margin-top: 20px;
 	margin-left: 1.5vw;
 	background-color: var(--bgc);
-	/* background-color: none; */
-	box-shadow: 0px 10px 10px 4px rgba(0,0,0,0.4);
+	background-color: none;
+	/* box-shadow: 0px 10px 10px 4px rgba(0,0,0,0.4);*/
 	border-radius: var(--br);
 	z-index: -1;
 }
