--- a/widgets/mybar/style.css
+++ b/widgets/mybar/style.css
@@ -21,7 +21,7 @@
 	margin-left: 1.5vw;
 	background-color: var(--bgc);
 	background-color: none;
-	/* box-shadow: 0px 10px 10px 4px rgba(0,0,0,0.4);*/
+	 box-shadow: 0px 3px 3px 3px rgba(0,0,0,0.15);
 	border-radius: var(--br);
 	z-index: -1;
 }
